--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://MyNameIsDenis.github.io/React-Portfolio",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
@@ -11,14 +12,19 @@
     "@testing-library/user-event": "^13.5.0",
     "gsap": "^3.12.4",
     "gsap-plugin": "^5.0.8",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
+    "styled-components": "^6.1.8",
     "swiper": "^11.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
