--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "gsap": "^3.12.4",
+    "gsap": "^3.13.0",
     "gsap-plugin": "^5.0.8",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-burger-menu": "^3.0.9",
+    "react-burger-menu": "^3.1.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "styled-components": "^6.1.8",
@@ -27,9 +27,7 @@
     "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
